# betterserver-oss

./: .gitignore  shell.nix
disasterserver/: Auth.c  CMakeLists.txt  CharSelect.c  Game.c  Lobby.c  Mapvote.c  Results.c  Server.c
include/: Auth.h  Server.h
